--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 h1{
     text-align: center;
 }
+
+body {
+    background: #63acdd
+}
+
+p {
+    text-align: center;
+}
+#avaliaçao{ 
+    font-size: 20px
+
+}
