--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+body {
+
+    background: #b8d9f0
+}
+    
+
 h1{
     text-align: center;
-}
-
-body {
-    background: #63acdd
-    
 }
 
 p {
@@ -13,5 +14,9 @@ p {
 #avaliaçao{ 
     font-size: 20px
 
+}
+
+em strong {
+    color:rgb(250, 1, 51)
 }
 
